# snakeGame

./: README.md
snake-sdl2/: CMakeLists.txt  Dockerfile  Makefile  README.md
snake-sdl2/docs/: مستند پروژه بازی مار.md
snake-sdl2/src/: main.cpp
